code clean up and optimization

--- a/app/src/main/res/menu/activity_main_actions.xml
+++ b/app/src/main/res/menu/activity_main_actions.xml
@@ -6,5 +6,9 @@
         android:icon="@drawable/ic_action_add"
         android:title="check currency"
         app:showAsAction="always"/>
+    <item android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_action_autorenew"
+        android:title="check currency"
+        app:showAsAction="always"/>
 
 </menu>
