--- a/app/src/main/res/layout/activity_crypto_main.xml
+++ b/app/src/main/res/layout/activity_crypto_main.xml
@@ -6,13 +6,20 @@
     android:layout_height="match_parent"
 
     tools:context="com.example.dent.cryptocurrencyconverter.CryptoMainActivity">
-
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/bitcoin"
         android:tint="#8c000000"
         android:scaleType="centerCrop"/>
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:max="100"
+        android:indeterminate="true"
+        android:visibility="gone" />
     <TextView
         android:id="@+id/main_txt"
         android:layout_width="wrap_content"
@@ -22,23 +29,9 @@
         android:fontFamily="serif-monospace"
         android:textSize="48dp"
         android:textStyle="bold"
-        android:text="Welcome! \n\nclick get started or the + button \n"
+        android:text="Welcome! \n\nclick the + button \n to get started"
         android:textAlignment="center"
         android:textColor="#fff"/>
-    <Button
-        android:id="@+id/main_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#3F51B5"
-        android:text="Get Started"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="48dp"
-        android:textSize="24dp"
-        android:textColor="#fff"
-        android:padding="16dp"
-        android:onClick=""
-        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cardList"
         android:layout_width="match_parent"
